<?xml version="1.0"?>
<package>
  <name>lsd_alignment</name>
  <version>0.0.0</version>
  <description>16720 Final Project - LSD SLAM alignment</description>

  <maintainer email="shsiung@andrew.cmu.edu">Jerry Hsiung</maintainer>
  
  <license>TODO</license>
 
  <author email="shsiung@andrew.cmu.edu">Jerry Hsiung</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
